observability/flashArray/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pure-fa-ingress
  namespace: observability-pure
  annotations:
spec:
  #ingressClassName: nginx
  rules:
    - host: pure-fa-exporter.d-arc-itd-clt01
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pure-fa-ome-svc
                port:
                  number: 9490
